Started to style the sidebar.

--- a/css/style.css
+++ b/css/style.css
@@ -88,3 +88,20 @@ table { border-collapse: collapse; border-spacing: 0; }
 body, figure, form { margin: 0; }
 
 p, pre, dl, menu, ol, ul { margin: 1em 0; }
+
+body { font-size: 13px; overflow: hidden; }
+
+#app { width: 572px; height: 406px; position: absolute; top: 50%; left: 50%; display: block; margin-left: -286px; margin-top: -203px; outline: 3px solid hotpink; }
+
+#editor { background: #333333; width: 398px; height: 100%; float: right; }
+
+#sidebar { background: url(../images/bg_sidebar.png); border-right: 1px solid black; width: 173px; height: 100%; float: left; position: relative; }
+#sidebar .top-bar { height: 30px; display: block; position: absolute; top: 0; bottom: auto; left: 0; right: 0; border-bottom: 1px solid #e6e6e6; box-shadow: 0 1px 0 white; }
+#sidebar #layers { display: block; position: absolute; top: 32px; bottom: 24px; left: 0; right: 0; }
+#sidebar .bottom-bar { height: 24px; line-height: 24px; background: url(../images/bg_sidebar_bottom_bar.png); display: block; position: absolute; top: auto; bottom: 0; left: 0; right: 0; padding: 0 10px; }
+#sidebar .opacity .number-input { display: inline-block; }
+
+#layers .layer { height: 28px; line-height: 28px; border: 1px solid #e5e5e5; border-bottom-color: #d9d9d9; border-radius: 5px; box-shadow: inset 0 -1px 0 white, inset 0 1px 0 white, inset -1px 0 0 white, inset 1px 0 0 white; margin: 3px 7px; position: relative; }
+#layers .layer .preview { width: 5px; display: block; position: absolute; top: 0; bottom: 0; left: 0; right: auto; border-radius: 5px 0 0 5px; }
+#layers .layer .visible { width: 30px; height: 28px; display: inline-block; }
+#layers .layer .name { display: inline-block; vertical-align: top; font-weight: bold; }
