--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,11 @@ body, figure, form { margin: 0; }
 
 p, pre, dl, menu, ol, ul { margin: 1em 0; }
 
+input[type=number] { -webkit-appearance: none; }
+input[type=number]::-webkit-outer-spin-button, input[type=number]::-webkit-inner-spin-button { -webkit-appearance: none; margin: 0; }
+
 body { font-size: 13px; overflow: hidden; }
+body *:not(input) { -webkit-user-select: none; cursor: default; }
 
 #app { width: 572px; height: 406px; position: absolute; top: 50%; left: 50%; display: block; margin-left: -286px; margin-top: -203px; outline: 3px solid hotpink; }
 
@@ -97,11 +101,23 @@ body { font-size: 13px; overflow: hidden; }
 
 #sidebar { background: url(../images/bg_sidebar.png); border-right: 1px solid black; width: 173px; height: 100%; float: left; position: relative; }
 #sidebar .top-bar { height: 30px; display: block; position: absolute; top: 0; bottom: auto; left: 0; right: 0; border-bottom: 1px solid #e6e6e6; box-shadow: 0 1px 0 white; }
-#sidebar #layers { display: block; position: absolute; top: 32px; bottom: 24px; left: 0; right: 0; }
-#sidebar .bottom-bar { height: 24px; line-height: 24px; background: url(../images/bg_sidebar_bottom_bar.png); display: block; position: absolute; top: auto; bottom: 0; left: 0; right: 0; padding: 0 10px; }
-#sidebar .opacity .number-input { display: inline-block; }
+#sidebar #layers { display: block; position: absolute; top: 36px; bottom: 24px; left: 0; right: 0; }
+#sidebar .bottom-bar { height: 24px; line-height: 24px; background: url(../images/bg_sidebar_bottom_bar.png); display: block; position: absolute; top: auto; bottom: 0; left: 0; right: 0; padding: 0 10px; font-size: 0; }
+#sidebar .bottom-bar button { -webkit-appearance: none; border: none; width: 20px; margin: 0 5px; cursor: default; height: 24px; }
+#sidebar .bottom-bar button:first-child { margin-left: 0; }
+#sidebar .bottom-bar button.add-layer { background: url(../images/icon_add_layer.png) no-repeat 50% 50%; }
+#sidebar .bottom-bar button.add-adjustment-layer { background: url(../images/icon_add_adjustment.png) no-repeat 50% 50%; }
+#sidebar .bottom-bar button.remove-layer { background: url(../images/icon_remove_layer.png) no-repeat 50% 50%; float: right; margin-right: 0; }
+#sidebar .opacity { float: right; margin: 6px 7px 0 0; font-size: 11px; text-shadow: 0 1px 0 white; color: #1a1a1a; }
+#sidebar .opacity .number-input { display: inline-block; font-size: 0; }
+#sidebar .opacity .number-input input { border-radius: 2px 0 0 2px; border: 1px solid #b3b3b3; height: 16px; line-height: 1; padding: 0; width: 32px; text-indent: 5px; margin-top: 0.5px; font-size: 11px; }
+#sidebar .opacity .number-input input:focus { outline: none; }
+#sidebar .opacity .number-input .trigger { border-radius: 0 2px 2px 0; width: 9px; height: 16px; background: #f2f2f2; display: inline-block; vertical-align: top; border: 1px solid #b3b3b3; border-left: none; margin: 0; }
+#sidebar .opacity .number-input .trigger:after { content: ""; display: block; width: 5px; height: 5px; margin: 6px 0 0 2px; background: url(../images/arrow.png) no-repeat; }
 
-#layers .layer { height: 28px; line-height: 28px; border: 1px solid #e5e5e5; border-bottom-color: #d9d9d9; border-radius: 5px; box-shadow: inset 0 -1px 0 white, inset 0 1px 0 white, inset -1px 0 0 white, inset 1px 0 0 white; margin: 3px 7px; position: relative; }
+#layers .layer { height: 28px; line-height: 28px; border: 1px solid #e5e5e5; border-bottom-color: #d9d9d9; border-radius: 5px; box-shadow: inset 0 -1px 0 white, inset 0 1px 0 white, inset -1px 0 0 white, inset 1px 0 0 white; margin: 3px 7px; position: relative; text-shadow: 0 1px 0 white; font-size: 0; background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, rgba(252, 252, 252, 0.3)), color-stop(100%, rgba(249, 249, 249, 0.3))); background-image: -webkit-linear-gradient(top, rgba(252, 252, 252, 0.3), rgba(249, 249, 249, 0.3)); background-image: -moz-linear-gradient(top, rgba(252, 252, 252, 0.3), rgba(249, 249, 249, 0.3)); background-image: -o-linear-gradient(top, rgba(252, 252, 252, 0.3), rgba(249, 249, 249, 0.3)); background-image: -ms-linear-gradient(top, rgba(252, 252, 252, 0.3), rgba(249, 249, 249, 0.3)); background-image: linear-gradient(top, rgba(252, 252, 252, 0.3), rgba(249, 249, 249, 0.3)); *zoom: 1; filter: progid:DXImageTransform.Microsoft.gradient(gradientType=0, startColorstr='#4DFCFCFC', endColorstr='#4DF9F9F9'); }
+#layers .layer.selected { background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #fcfcfc), color-stop(100%, #f9f9f9)); background-image: -webkit-linear-gradient(top, #fcfcfc, #f9f9f9); background-image: -moz-linear-gradient(top, #fcfcfc, #f9f9f9); background-image: -o-linear-gradient(top, #fcfcfc, #f9f9f9); background-image: -ms-linear-gradient(top, #fcfcfc, #f9f9f9); background-image: linear-gradient(top, #fcfcfc, #f9f9f9); *zoom: 1; filter: progid:DXImageTransform.Microsoft.gradient(gradientType=0, startColorstr='#FFFCFCFC', endColorstr='#FFF9F9F9'); }
+#layers .layer.disabled .visible { background-image: url(../images/icon_eye_disabled.png); }
 #layers .layer .preview { width: 5px; display: block; position: absolute; top: 0; bottom: 0; left: 0; right: auto; border-radius: 5px 0 0 5px; }
-#layers .layer .visible { width: 30px; height: 28px; display: inline-block; }
-#layers .layer .name { display: inline-block; vertical-align: top; font-weight: bold; }
+#layers .layer .visible { margin: 0 6px 0 12px; width: 14px; height: 28px; display: inline-block; background: url(../images/icon_eye.png) 0 9px no-repeat; }
+#layers .layer .name { display: inline-block; vertical-align: top; font-weight: bold; color: #2d2d2d; font-size: 13px; }
