--- a/css/style.css
+++ b/css/style.css
@@ -97,7 +97,35 @@ body *:not(input) { -webkit-user-select: none; cursor: default; }
 
 #app { width: 572px; height: 406px; position: absolute; top: 50%; left: 50%; display: block; margin-left: -286px; margin-top: -203px; outline: 3px solid hotpink; }
 
-#editor { background: #333333; width: 398px; height: 100%; float: right; }
+#editor { background: url(../images/bg_editor.jpg); width: 398px; height: 100%; float: right; padding: 20px; box-sizing: border-box; }
+
+#gradient-preview { height: 50px; border-radius: 5px 5px 0 0; border: 1px solid #2d2d2d; box-shadow: 0 1px 0 rgba(255, 255, 255, 0.15), inset 0 1px 5px rgba(0, 0, 0, 0.2), inset 0 0 2px rgba(0, 0, 0, 0.2); position: relative; }
+#gradient-preview div { display: block; position: absolute; top: 0; bottom: 0; left: 0; right: 0; border-radius: 5px 5px 0 0; }
+#gradient-preview .gradient { background: -webkit-gradient(linear, 0% 50%, 100% 50%, color-stop(0%, rgba(138, 226, 52, 0.6)), color-stop(100%, #4e9a06)); background: -webkit-linear-gradient(left, rgba(138, 226, 52, 0.6) 0%, #4e9a06 100%); background: -moz-linear-gradient(left, rgba(138, 226, 52, 0.6) 0%, #4e9a06 100%); background: -o-linear-gradient(left, rgba(138, 226, 52, 0.6) 0%, #4e9a06 100%); background: -ms-linear-gradient(left, rgba(138, 226, 52, 0.6) 0%, #4e9a06 100%); background: linear-gradient(left, rgba(138, 226, 52, 0.6) 0%, #4e9a06 100%); }
+#gradient-preview .transparency { background: url(../images/bg_transparent.png); }
+
+#gradient-slider { margin-bottom: 20px; }
+#gradient-slider .color-stops { position: relative; }
+#gradient-slider .color-stops .color-stop { width: 16px; height: 16px; border-radius: 0 12px 12px 12px; -webkit-transform: rotate(45deg); -webkit-background-clip: padding-box; border: 2px solid black; position: absolute; top: -6px; cursor: default; font: 12px helvetica, sans-serif; color: red; box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5); -webkit-box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5); margin-left: -8px; -webkit-transition: all 0.1s; }
+#gradient-slider .color-stops .color-stop.current { border-color: white; width: 20px; height: 20px; top: -8px; margin-left: -10px; }
+#gradient-slider .color-stops .color-stop:hover { width: 20px; top: -8px; height: 20px; margin-left: -10px; }
+#gradient-slider .track { margin-top: 10px; height: 5px; background: rgba(0, 0, 0, 0.3); border-radius: 10px; box-shadow: 0 1px 0 rgba(255, 255, 255, 0.05), inset 0 1px 0 rgba(0, 0, 0, 0.25); }
+
+#color-stop-settings { font-size: 0; text-align: center; }
+#color-stop-settings > div { font-size: 13px; width: 87px; height: 48px; display: inline-block; background: rgba(0, 0, 0, 0.25); border-radius: 3px; border: 1px solid #0d0d0d; box-shadow: 0 1px 0 rgba(255, 255, 255, 0.1), inset 0 1px 6px rgba(0, 0, 0, 0.2); margin: 0 1px; vertical-align: top; }
+#color-stop-settings > div:first-child { margin-left: 0; }
+#color-stop-settings > div:last-child { margin-right: 0; }
+#color-stop-settings > div.alpha { width: 87px; }
+#color-stop-settings > div.alpha input { width: 44px; }
+#color-stop-settings > div.color { width: 122px; }
+#color-stop-settings > div.color input { width: 70px; }
+#color-stop-settings > div.position { width: 87px; }
+#color-stop-settings > div.position input { width: 44px; }
+#color-stop-settings > div.remove { width: 48px; }
+#color-stop-settings h3 { color: #999999; font-size: 12px; margin: 3px 0 1px; font-weight: 400; }
+#color-stop-settings input { border: none; padding: 0; margin: 0; line-height: 1; height: 25px; border-radius: 3px; text-align: center; background: transparent; color: white; font-weight: bold; font-family: "PT Sans"; font-size: 15px; }
+#color-stop-settings input:hover { background: rgba(255, 255, 255, 0.1); }
+#color-stop-settings input:focus { background: white; color: #333333; outline: none; }
 
 #sidebar { background: url(../images/bg_sidebar.png); border-right: 1px solid black; width: 173px; height: 100%; float: left; position: relative; }
 #sidebar .top-bar { height: 30px; display: block; position: absolute; top: 0; bottom: auto; left: 0; right: 0; border-bottom: 1px solid #e6e6e6; box-shadow: 0 1px 0 white; }
