--- a/sass/style.sass
+++ b/sass/style.sass
@@ -223,7 +223,7 @@ input[type=number]
 		margin: 0
 
 // Colors and Backgrounds
-$bg_editor: #333
+$bg_editor: url(../images/bg_editor.jpg)
 $bg_sidebar: url(../images/bg_sidebar.png)
 $bg_sidebar_bottom_bar: url(../images/bg_sidebar_bottom_bar.png)
 
@@ -244,15 +244,163 @@ body
 
 
 
+// *************************
+// 
 // Gradient Editor
+// 
+// *************************
+
 #editor
 	background: $bg_editor
 	width: 398px
 	height: 100%
 	float: right
+	padding: 20px
+	box-sizing: border-box
 
 
+// Gradient Preview
+#gradient-preview
+	height: 50px
+	border-radius: 5px 5px 0 0
+	border: 1px solid #2d2d2d
+	box-shadow: 0 1px 0 rgba(255,255,255,0.15), inset 0 1px 5px rgba(0,0,0,0.2), inset 0 0 2px rgba(0,0,0,0.2)
+	position: relative
+
+	div
+		@include absolute(0,0,0,0)
+		border-radius: 5px 5px 0 0
+
+	.gradient
+		@include background(linear-gradient(left, rgba(138,226,52,0.6) 0%, #4e9a06 100%))
+
+	.transparency
+		background: url(../images/bg_transparent.png)
+
+
+// The Slider
+#gradient-slider
+	margin-bottom: 20px
+	
+	// Color Stops
+	.color-stops
+		position: relative
+
+		.color-stop
+			width: 16px
+			height: 16px
+			border-radius: 0 12px 12px 12px
+			-webkit-transform: rotate(45deg)
+			-webkit-background-clip: padding-box
+			border: 2px solid black
+			position: absolute
+			top: -6px
+			cursor: default
+			font: 12px helvetica, sans-serif
+			color: red
+			box-shadow: 0 2px 10px rgba(0,0,0,0.5)
+			-webkit-box-shadow: 0 2px 10px rgba(0,0,0,0.5)
+			margin-left: -8px
+			-webkit-transition: all 0.1s
+
+			&.current
+				border-color: white
+				width: 20px
+				height: 20px
+				top: -8px
+				margin-left: -10px
+		
+			&:hover
+				width: 20px
+				top: -8px
+				height: 20px
+				margin-left: -10px
+		
+
+	// The Track
+	.track
+		margin-top: 10px
+		height: 5px
+		background: rgba(0,0,0,0.3)
+		border-radius: 10px
+		box-shadow: 0 1px 0 rgba(255,255,255,0.05), inset 0 1px 0 rgba(0,0,0,0.25)
+
+#color-stop-settings
+	font-size: 0
+	text-align: center
+
+	& > div
+		font-size: 13px
+		width: 87px
+		height: 48px
+		display: inline-block
+		background: rgba(0,0,0,0.25)
+		border-radius: 3px
+		border: 1px solid #0d0d0d
+		box-shadow: 0 1px 0 rgba(255,255,255,0.1), inset 0 1px 6px rgba(0,0,0,0.2)
+		margin: 0 1px
+		vertical-align: top
+
+		&:first-child
+			margin-left: 0
+		&:last-child
+			margin-right: 0
+
+		&.alpha
+			width: 87px
+			input
+				width: 44px
+
+		&.color
+			width: 122px
+			input
+				width: 70px
+
+		&.position
+			width: 87px
+			input
+				width: 44px
+
+		&.remove
+			width: 48px
+
+	h3
+		color: #999999
+		font-size: 12px
+		margin: 3px 0 1px
+		font-weight: 400
+
+	input
+		border: none
+		padding: 0
+		margin: 0
+		line-height: 1
+		height: 25px
+		border-radius: 3px
+		text-align: center
+		background: transparent
+		color: #fff
+		font-weight: bold
+		font-family: 'PT Sans'
+		font-size: 15px
+
+		&:hover
+			background: rgba(255,255,255,0.1)
+
+		&:focus
+			background: #fff
+			color: #333
+			outline: none
+
+
+
+
+// *************************
+// 
 // Sidebar
+// 
+// *************************
+
 #sidebar
 	background: $bg_sidebar
 	border-right: 1px solid #000
