--- a/sass/style.sass
+++ b/sass/style.sass
@@ -226,6 +226,10 @@ input[type=number]
 $bg_editor: url(../images/bg_editor.jpg)
 $bg_sidebar: url(../images/bg_sidebar.png)
 $bg_sidebar_bottom_bar: url(../images/bg_sidebar_bottom_bar.png)
+$bg_switch: url(../images/bg_switch.png)
+
+// Icons
+$icon_delete_color_stop: url(../images/icon_delete_color_stop.png)
 
 body
 	font-size: 13px
@@ -363,6 +367,10 @@ body
 
 		&.remove
 			width: 48px
+			button
+				width: 100%
+				height: 100%
+				background: $icon_delete_color_stop no-repeat 50% 50%
 
 	h3
 		color: #999999
@@ -389,9 +397,56 @@ body
 
 		&:focus
 			background: #fff
+			box-shadow: 0 1px 3px rgba(0,0,0,0.3)
 			color: #333
 			outline: none
 
+	button
+		border: 0
+		opacity: 0.7
+		@include transition(opacity 0.15s)
+
+		&:hover
+			opacity: 1
+
+// Settings
+#gradient-settings
+	margin-top: 15px
+	margin-bottom: 15px
+
+	// Switch
+	.switch
+		$height: 26px
+		$width: 120px
+		$offset: 2px
+
+		width: $width
+		height: $height
+		border-radius: 3px
+		box-shadow: 0 1px 0 rgba(255,255,255,0.15), inset 0 2px 6px rgba(0,0,0,0.25), inset 0 1px 1px rgba(0,0,0,0.15)
+		@include background(linear-gradient(bottom, rgba(0,0,0,0.05) 0%, rgba(255,255,255,0.05) 100%), $bg_switch)
+		font-size: 0
+
+		div
+			text-align: center
+			margin-top: $offset
+			line-height: $height - ($offset * 2)
+			font-size: 13px
+			font-weight: bold
+			color: #737373
+			text-shadow: 0 1px 1px rgba(0,0,0,0.6)
+			width: ($width / 2) - ($offset * 2)
+			margin: $offset
+			display: inline-block
+
+			border-radius: $offset
+
+			&.selected
+				text-shadow: 0 1px 0 rgba(255,255,255,0.5)
+				color: #4c4c4c
+				background: #d7d7d7
+				box-shadow: 0 1px 1px rgba(0,0,0,0.25), inset 0 1px 0 rgba(255,255,255,0.6)
+				@include background(linear-gradient(top, #e3e3e3 0%, #d4d4d4 100%))
 
 
 
