Starting to look more like Graditor

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -230,6 +230,7 @@ $bg_switch: url(../images/bg_switch.png)
 
 // Icons
 $icon_delete_color_stop: url(../images/icon_delete_color_stop.png)
+$icon_settings: url(../images/icon_settings.png)
 
 body
 	font-size: 13px
@@ -413,6 +414,7 @@ body
 #gradient-settings
 	margin-top: 15px
 	margin-bottom: 15px
+	float: left
 
 	// Switch
 	.switch
@@ -448,30 +450,51 @@ body
 				box-shadow: 0 1px 1px rgba(0,0,0,0.25), inset 0 1px 0 rgba(255,255,255,0.6)
 				@include background(linear-gradient(top, #e3e3e3 0%, #d4d4d4 100%))
 
+// Gradient Output
+#gradient-output
+	$length: 170px
+	width: $length
+	height: $length
+	border-radius: 5px
+	background: #ea4141
+	border: 1px solid #2d2d2d
+	box-shadow: 0 1px 0 rgba(255,255,255,0.2), inset 0 1px 5px rgba(0,0,0,0.3)
+
 // Buttons
-#editor > button
-	height: 26px
-	@include background(linear-gradient(top, #4c4f54 0%, #393b3f 100%))
-	box-shadow: 0 1px 1px rgba(0,0,0,0.17), inset 0 1px 0 rgba(255,255,255,0.1), inset 0 0 2px rgba(255,255,255,0.2), inset 0 -1px 4px rgba(0,0,0,0.1)
-	border: 1px solid #1a1b1e
-	border-radius: 3px
-	color: #ccc
-	font-weight: bold
-	text-shadow: 0 1px 1px rgba(0,0,0,0.4)
-	font-size: 12px
+.right
+	margin-top: 15px
+	float: right
 
-	&:hover
-		@include background(linear-gradient(top, #55585d 0%, #3f4245 100%))
+	button
+		margin-top: 10px
+		height: 26px
+		@include background(linear-gradient(top, #4c4f54 0%, #393b3f 100%))
+		box-shadow: 0 1px 1px rgba(0,0,0,0.17), inset 0 1px 0 rgba(255,255,255,0.1), inset 0 0 2px rgba(255,255,255,0.2), inset 0 -1px 4px rgba(0,0,0,0.1)
+		border: 1px solid #1a1b1e
+		border-radius: 3px
+		color: #ccc
+		font-weight: bold
+		text-shadow: 0 1px 1px rgba(0,0,0,0.4)
+		font-size: 12px
 
-	&:active
-		@include background(linear-gradient(top, #34363a 0%, #46494d 100%))
-		box-shadow: 0 1px 0 rgba(255,255,255,0.1), inset 0 1px 3px rgba(0,0,0,0.3)
+		&:hover
+			@include background(linear-gradient(top, #55585d 0%, #3f4245 100%))
 
-	&.settings
-		width: 26px
+		&:active
+			@include background(linear-gradient(top, #34363a 0%, #46494d 100%))
+			box-shadow: 0 1px 0 rgba(255,255,255,0.1), inset 0 1px 3px rgba(0,0,0,0.3)
 
-	&.get-code
-		width: 94px
+		&.settings
+			width: 26px
+			&:after
+				content: ''
+				display: block
+				width: 26px
+				height: 26px
+				background: $icon_settings no-repeat 1px 4px
+
+		&.get-code
+			width: 94px
 
 
 
