--- a/sass/style.sass
+++ b/sass/style.sass
@@ -464,6 +464,7 @@ body
 .right
 	margin-top: 15px
 	float: right
+	font-size: 0
 
 	button
 		margin-top: 10px
@@ -486,6 +487,7 @@ body
 
 		&.settings
 			width: 26px
+			margin-right: -1px
 			&:after
 				content: ''
 				display: block
