--- a/css/style.css
+++ b/css/style.css
@@ -137,11 +137,11 @@ body *:not(input) { -webkit-user-select: none; cursor: default; }
 
 #gradient-output { width: 170px; height: 170px; border-radius: 5px; background: #ea4141; border: 1px solid #2d2d2d; box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2), inset 0 1px 5px rgba(0, 0, 0, 0.3); }
 
-.right { margin-top: 15px; float: right; }
+.right { margin-top: 15px; float: right; font-size: 0; }
 .right button { margin-top: 10px; height: 26px; background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #4c4f54), color-stop(100%, #393b3f)); background: -webkit-linear-gradient(top, #4c4f54 0%, #393b3f 100%); background: -moz-linear-gradient(top, #4c4f54 0%, #393b3f 100%); background: -o-linear-gradient(top, #4c4f54 0%, #393b3f 100%); background: -ms-linear-gradient(top, #4c4f54 0%, #393b3f 100%); background: linear-gradient(top, #4c4f54 0%, #393b3f 100%); box-shadow: 0 1px 1px rgba(0, 0, 0, 0.17), inset 0 1px 0 rgba(255, 255, 255, 0.1), inset 0 0 2px rgba(255, 255, 255, 0.2), inset 0 -1px 4px rgba(0, 0, 0, 0.1); border: 1px solid #1a1b1e; border-radius: 3px; color: #cccccc; font-weight: bold; text-shadow: 0 1px 1px rgba(0, 0, 0, 0.4); font-size: 12px; }
 .right button:hover { background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #55585d), color-stop(100%, #3f4245)); background: -webkit-linear-gradient(top, #55585d 0%, #3f4245 100%); background: -moz-linear-gradient(top, #55585d 0%, #3f4245 100%); background: -o-linear-gradient(top, #55585d 0%, #3f4245 100%); background: -ms-linear-gradient(top, #55585d 0%, #3f4245 100%); background: linear-gradient(top, #55585d 0%, #3f4245 100%); }
 .right button:active { background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #34363a), color-stop(100%, #46494d)); background: -webkit-linear-gradient(top, #34363a 0%, #46494d 100%); background: -moz-linear-gradient(top, #34363a 0%, #46494d 100%); background: -o-linear-gradient(top, #34363a 0%, #46494d 100%); background: -ms-linear-gradient(top, #34363a 0%, #46494d 100%); background: linear-gradient(top, #34363a 0%, #46494d 100%); box-shadow: 0 1px 0 rgba(255, 255, 255, 0.1), inset 0 1px 3px rgba(0, 0, 0, 0.3); }
-.right button.settings { width: 26px; }
+.right button.settings { width: 26px; margin-right: -1px; }
 .right button.settings:after { content: ""; display: block; width: 26px; height: 26px; background: url(../images/icon_settings.png) no-repeat 1px 4px; }
 .right button.get-code { width: 94px; }
 
