--- a/sass/style.sass
+++ b/sass/style.sass
@@ -308,7 +308,7 @@ body
 			margin-left: -8px
 			-webkit-transition: all 0.1s
 
-			&.current
+			&.selected
 				border-color: white
 				width: 20px
 				height: 20px
