--- a/sass/style.sass
+++ b/sass/style.sass
@@ -306,7 +306,7 @@ body
 			box-shadow: 0 2px 10px rgba(0,0,0,0.5)
 			-webkit-box-shadow: 0 2px 10px rgba(0,0,0,0.5)
 			margin-left: -8px
-			-webkit-transition: all 0.1s
+			// -webkit-transition: all 0.1s
 
 			&.selected
 				border-color: white
