--- a/css/style.css
+++ b/css/style.css
@@ -93,7 +93,7 @@ input[type=number] { -webkit-appearance: none; }
 input[type=number]::-webkit-outer-spin-button, input[type=number]::-webkit-inner-spin-button { -webkit-appearance: none; margin: 0; }
 
 body { font-size: 13px; overflow: hidden; }
-body *:not(input) { -webkit-user-select: none; cursor: default; }
+body *:not(input) { -webkit-user-select: none; -moz-user-select: none; cursor: default; }
 
 #app { width: 572px; height: 406px; position: absolute; top: 50%; left: 50%; display: block; margin-left: -286px; margin-top: -203px; outline: 3px solid hotpink; }
 
@@ -106,10 +106,11 @@ body *:not(input) { -webkit-user-select: none; cursor: default; }
 
 #gradient-slider { margin-bottom: 20px; }
 #gradient-slider .color-stops { position: relative; }
-#gradient-slider .color-stops .color-stop { width: 16px; height: 16px; border-radius: 0 12px 12px 12px; -webkit-transform: rotate(45deg); -webkit-background-clip: padding-box; border: 2px solid black; position: absolute; top: -6px; cursor: default; font: 12px helvetica, sans-serif; color: red; box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5); -webkit-box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5); margin-left: -8px; }
+#gradient-slider .color-stops .color-stop { width: 16px; height: 16px; border-radius: 0 12px 12px 12px; -webkit-transform: rotate(45deg); -moz-transform: rotate(45deg); -ms-transform: rotate(45deg); -o-transform: rotate(45deg); transform: rotate(45deg); -webkit-background-clip: padding; -moz-background-clip: padding; background-clip: padding-box; border: 2px solid black; position: absolute; top: -6px; cursor: default; font: 12px helvetica, sans-serif; color: red; box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5); -webkit-box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5); -moz-box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5); box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5); margin-left: -8px; z-index: 2; }
 #gradient-slider .color-stops .color-stop.selected { border-color: white; width: 20px; height: 20px; top: -8px; margin-left: -10px; }
 #gradient-slider .color-stops .color-stop:hover { width: 20px; top: -8px; height: 20px; margin-left: -10px; }
-#gradient-slider .track { margin-top: 10px; height: 5px; background: rgba(0, 0, 0, 0.3); border-radius: 10px; box-shadow: 0 1px 0 rgba(255, 255, 255, 0.05), inset 0 1px 0 rgba(0, 0, 0, 0.25); }
+#gradient-slider .track { cursor: pointer; margin-top: 5px; height: 10px; position: relative; }
+#gradient-slider .track:after { content: ""; display: block; background: rgba(0, 0, 0, 0.3); border-radius: 10px; -webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.05), inset 0 1px 0 rgba(0, 0, 0, 0.25); -moz-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.05), inset 0 1px 0 rgba(0, 0, 0, 0.25); box-shadow: 0 1px 0 rgba(255, 255, 255, 0.05), inset 0 1px 0 rgba(0, 0, 0, 0.25); height: 5px; position: absolute; top: 2px; left: 0; right: 0; z-index: 0; }
 
 #color-stop-settings { font-size: 0; text-align: center; }
 #color-stop-settings > div { font-size: 13px; width: 87px; height: 48px; display: inline-block; background: rgba(0, 0, 0, 0.25); border-radius: 3px; border: 1px solid #0d0d0d; box-shadow: 0 1px 0 rgba(255, 255, 255, 0.1), inset 0 1px 6px rgba(0, 0, 0, 0.2); margin: 0 1px; vertical-align: top; }
