--- a/sass/style.sass
+++ b/sass/style.sass
@@ -239,6 +239,7 @@ body
 	// Disable selection
 	*:not(input)
 		-webkit-user-select: none
+		-moz-user-select: none
 		cursor: default
 
 // App
@@ -295,8 +296,8 @@ body
 			width: 16px
 			height: 16px
 			border-radius: 0 12px 12px 12px
-			-webkit-transform: rotate(45deg)
-			-webkit-background-clip: padding-box
+			@include transform( rotate(45deg) )
+			@include background-clip( padding-box )
 			border: 2px solid black
 			position: absolute
 			top: -6px
@@ -304,8 +305,9 @@ body
 			font: 12px helvetica, sans-serif
 			color: red
 			box-shadow: 0 2px 10px rgba(0,0,0,0.5)
-			-webkit-box-shadow: 0 2px 10px rgba(0,0,0,0.5)
+			@include box-shadow( 0 2px 10px rgba(0,0,0,0.5) )
 			margin-left: -8px
+			z-index: 2
 			// -webkit-transition: all 0.1s
 
 			&.selected
@@ -324,11 +326,23 @@ body
 
 	// The Track
 	.track
-		margin-top: 10px
-		height: 5px
-		background: rgba(0,0,0,0.3)
-		border-radius: 10px
-		box-shadow: 0 1px 0 rgba(255,255,255,0.05), inset 0 1px 0 rgba(0,0,0,0.25)
+		cursor: pointer
+		margin-top: 5px
+		height: 10px
+		position: relative
+		
+		&:after
+			content: ''
+			display: block
+			background: rgba(0,0,0,0.3)
+			border-radius: 10px
+			@include box-shadow(0 1px 0 rgba(255,255,255,0.05), inset 0 1px 0 rgba(0,0,0,0.25))
+			height: 5px
+			position: absolute
+			top: 2px
+			left: 0
+			right: 0
+			z-index: 0
 
 #color-stop-settings
 	font-size: 0
